syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "api/proto";

message Request {
}

message Response {
    int32 code = 1;
    bool status = 2;
    string message = 3;
}

message GetUsersResponse {
    int32 code = 1;
    bool status = 2;
    string message = 3;
    repeated UserResponse data = 4;
}

message UserResponse  {
	string id = 1;
    optional string profile_image = 2;
    optional string full_name = 3;
    string user_name = 4;
    optional string phone = 5;
    optional string email = 6;
    optional google.protobuf.Timestamp dob = 7;
    optional string gender = 8;
    string user_type = 9;
}

message GetProductRequest {
    optional string merchant_id = 1;
}

message ProductResponse  {
	string id = 1;
	optional string merchant_id = 2;
	repeated string product_images = 3;
    string product_name = 4;
    optional string description = 5;
	optional string category_name = 6;
    repeated double size = 7;
    double price = 8;
    optional double discount_price = 9;
    optional double review_star = 11;
    optional string wishlist_id = 12;
}

message GetProductsResponse {
    int32 code = 1;
    bool status = 2;
    string message = 3;
    repeated ProductResponse data = 4;
}

message GetProductByIdResponse {
    int32 code = 1;
    bool status = 2;
    string message = 3;
    ProductResponse data = 4;
}

message DiscountResponse {
	string product_id = 1;
	string name = 2;
    string description = 3;
    float percentage = 4;
	string  product_image = 5;
    uint32 card_color = 6;
}

message CreateOrderRequest {
    string address_id = 1;
    string cart_id = 2;
    optional string promo_id = 3;
    float amount = 4;
    string payment_mode = 5;
    optional string transaction_id = 6;
}

message GetOrdersRequest {
    string type = 1;
}

message GetOrderResponse {
    int32 code = 1;
    bool status = 2;
    string message = 3;
    repeated OrderResponse data = 4;
}

message OrderResponse  {
	string id = 1;
    string product_id = 2;
	string product_image = 3;
    string product_name = 4;
    double size = 5;
    double price = 6;
    string status = 7;
}

message UpdateOrderRequest {
    string order_item_id = 1;
}

message AddReviewRequest {
    string product_id = 1;
    string order_item_id = 2;
    float start = 3;
    string review = 4;
}